--- a/metadata.yaml
+++ b/metadata.yaml
@@ -34,5 +34,6 @@ subjects:
 - !lcc 'PZ'
 - !lcsh 'Vermont -- History -- Revolution, 1775-1783 -- Juvenile fiction'
 - !lcsh 'New York (State) -- History -- Revolution, 1775-1783 -- Juvenile fiction'
+- GITenberg
 title: A Little Maid of Ticonderoga
 url: http://www.gutenberg.org/ebooks/26723
